Sección de películas en tendencias (TrendingPreviewMoviesContainer)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header id="header" class="header-container">
     <span class="header-arrow inactive">&lt;</span>
-    <h1 class="header-title">PlatziMovies</h1>
+    <h1 class="header-title">Red Movies TV</h1>
     <h1 class="header-title header-title--categoryView inactive">Acción</h1>
 
     <form id="searchForm" class="header-searchForm">
@@ -31,29 +31,14 @@
     </div>
 
     <article class="trendingPreview-movieList">
-      <div class="movie-container">
+      <!-- <div class="movie-container">
         <img
           src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
           class="movie-img"
           alt="Nombre de la película"
         />
-      </div>
+      </div> -->
 
-      <div class="movie-container">
-        <img
-          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-          class="movie-img"
-          alt="Nombre de la película"
-        />
-      </div>
-
-      <div class="movie-container">
-        <img
-          src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-          class="movie-img"
-          alt="Nombre de la película"
-        />
-      </div>
     </article>
   </section>
 
@@ -153,7 +138,7 @@
     </article>
   </section>
 
-  <footer>Hecho con amor en Platzi por @juandc</footer>
+  <footer>Hecho en el Curso Práctico de Consumo de APIs de Platzi</footer>
   
   <script src="./src/secrets.js"></script>
   <script src="./src/main.js"></script>
