Migrando de Fetch a Axios!

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
   <footer>Hecho en el Curso Práctico de Consumo de APIs de Platzi</footer>
   
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/secrets.js"></script>
   <script src="./src/main.js"></script>
 </body>
