Se le agregó funcionalidad a MovieDetail y relatedMovies, además de otras optimizaciones

--- a/index.html
+++ b/index.html
@@ -54,29 +54,14 @@
   </section>
 
   <section id="genericList" class="genericList-container inactive">
-    <div class="movie-container">
+    <!-- <div class="movie-container">
       <img
         src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
         class="movie-img"
         alt="Nombre de la película"
       />
-    </div>
+    </div> -->
 
-    <div class="movie-container">
-      <img
-        src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-        class="movie-img"
-        alt="Nombre de la película"
-      />
-    </div>
-
-    <div class="movie-container">
-      <img
-        src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
-        class="movie-img"
-        alt="Nombre de la película"
-      />
-    </div>
   </section>
 
   <section id="movieDetail" class="movieDetail-container inactive">
@@ -87,7 +72,7 @@
     </p>
 
     <article class="categories-list">
-      <div class="category-container">
+      <!-- <div class="category-container">
         <h3 id="id28" class="category-title">Romance</h3>
       </div>
 
@@ -97,7 +82,7 @@
 
       <div class="category-container">
         <h3 id="id14" class="category-title">Acción</h3>
-      </div>
+      </div> -->
     </article>
 
     <article class="relatedMovies-container">
